Update friend list

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,7 +68,7 @@
     </h3>
   </div>
   <a class="item">
-    <i class="user icon"></i> <b>主目录</b>
+    <i class="disk outline icon"></i> <b>主目录</b>
   </a>
   <a class="item launch-toc-friend">
     <i class="user icon"></i> <b>好友</b>
