Update sidebar with back icon

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,8 +59,10 @@
 <body id="example" class="custom" ontouchstart="">
 
 <div class="ui vertical inverted sidebar menu" id="toc">
-  <div class="item">
-
+  <a class="item title back">
+      <h3><b><i class="angle left outline icon"></i></b></h3>
+  </a>
+  <div class="item title">
     <h3>
         <a class="ui logo icon">
             <img src="images/header.png"  style="height:17px">
@@ -89,8 +91,13 @@
 </div>
 
 <div class="ui vertical inverted teal sidebar menu" id="toc-friend">
-  <div class="item">
-      <h3><i class="user icon"></i><b>我的好友</b></h3>
+  <a class="item title back">
+      <h3><b><i class="angle left outline icon"></i></b></h3>
+  </a>  
+  <div class="item title">
+    <h3>
+        <i class="user icon"></i><b>我的好友</b>
+    </h3>
   </div>
   <a class="item">
     <i class="disk outline icon"></i> <b>李强</b>
