Update friends and groups frontend

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -165,21 +165,21 @@
     <div class="results"></div>
   </div>
   <a class="item launch-toc-group-members">
-    <i class="remove outline icon"></i> <b>李强粉丝群</b>
+    <b>李强粉丝群</b>
   </a>
   <a class="item launch-toc-group-members">
-    <i class="remove outline icon"></i> <b>李强黑群</b>
+    <b>李强黑群</b>
   </a>
   <a class="item launch-toc-group-members">
-    <i class="remove outline icon"></i> <b>李强DOTA群</b>
+    <b>李强DOTA群</b>
   </a>
   <a class="item launch-toc-group-members">
-    <i class="remove outline icon"></i> <b>代写小学生作业</b>
+    <b>代写小学生作业</b>
   </a>
 </div>    
 
     
-<!-- Group member sidebar -->
+<!-- Group members sidebar -->
 <div class="ui vertical inverted blue sidebar menu" id="toc-group-members">
   <a class="item title back">
       <h3><b><i class="angle left outline icon"></i></b></h3>
@@ -202,16 +202,16 @@
   </div>
 
   <a class="item">
-    <i class="remove outline icon"></i> <b>李强</b>
+    <b>李强</b>
   </a>
   <a class="item">
-    <i class="remove outline icon"></i> <b>李强强</b>
+    <b>李强强</b>
   </a>
   <a class="item">
-    <i class="remove outline icon"></i> <b>李大强</b>
+    <b>李大强</b>
   </a>
   <a class="item">
-    <i class="remove outline icon"></i> <b>超级李强</b>
+    <b>超级李强</b>
   </a>
 </div>    
 
