--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -240,7 +240,7 @@
 
         <div class="right menu">
           <div class="ui dropdown item" id="account">
-              <a><i class="setting icon"></i> 李强</a>
+              <a><i class="setting icon"> </i><span id="username"></span></a>
               <div class="ui menu">
               <a class="item" id="update-information">
                 修改信息
@@ -334,7 +334,7 @@
     </div>
 
     <div class="ui login small modal">
-      <i class="close icon"></i>
+      <!-- <i class="close icon"></i> -->
       <div class="ui content">
         <div class="ui two column middle aligned relaxed fitted stackable grid">
           <div class="column">
@@ -342,18 +342,21 @@
               <div class="field">
                 <label>用户名</label>
                 <div class="ui left icon input">
-                  <input type="text" placeholder="用户名">
+                  <input name="loginName" type="text" placeholder="用户名">
                   <i class="user icon"></i>
                 </div>
               </div>
               <div class="field">
                 <label>密码</label>
                 <div class="ui left icon input">
-                  <input type="password">
+                  <input name="password" type="password">
                   <i class="lock icon"></i>
                 </div>
               </div>
               <div class="ui blue submit button">登陆</div>
+              <div class="ui error message">
+                  用户不存在或密码错误
+              </div>
             </div>
           </div>
           <div class="ui vertical divider">
@@ -370,7 +373,7 @@
     </div>
     
     <div class="ui register small modal">
-      <i class="close icon"></i>
+      <!-- <i class="close icon"></i> -->
       <div class="ui content">
         <div class="ui two column middle aligned relaxed fitted stackable grid">
           <div class="column">
@@ -378,21 +381,21 @@
               <div class="field">
                 <label>用户名</label>
                 <div class="ui left icon input">
-                  <input type="text" placeholder="用户名">
+                  <input name="loginName" type="text" placeholder="用户名">
                   <i class="user icon"></i>
                 </div>
               </div>
               <div class="field">
                 <label>密码</label>
                 <div class="ui left icon input">
-                  <input type="password">
+                  <input name="password" type="password">
                   <i class="lock icon"></i>
                 </div>
               </div>
               <div class="field">
                 <label>确认密码</label>
                 <div class="ui left icon input">
-                  <input type="password">
+                  <input name="confirmPassword" type="password">
                   <i class="lock icon"></i>
                 </div>
               </div>
