--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -400,6 +400,9 @@
                 </div>
               </div>
               <div class="ui green submit button">注册</div>
+                <div class="ui error message">
+                  用户已注册
+              </div>
             </div>
           </div>
           <div class="ui vertical divider">
