The friend search function works

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,11 +113,12 @@
         </div>
         <div class="results"></div>
       </div>
-      <div class="launch-toc-friend-details">
-          <a class="item">
-            <b>李强</b>
-          </a>
-      </div>
+      <a class="item launch-toc-new-friend-details">
+          <i><b data="name">李强</b>  请求添加您为好友</i>
+      </a>
+      <a class="item launch-toc-friend-details">
+        <b>李强</b>
+      </a>
     </div>     
 
     <!-- Friend details sidebar -->
@@ -132,8 +133,8 @@
       </div>
 
       <div class="teal 2 fluid ui buttons">
-        <div class="ui button">查看文件</div>
-        <div class="ui button">删除好友</div>
+        <div class="ui button" id="view-file">查看文件</div>
+        <div class="ui button" id="delete-friend">删除好友</div>
       </div>
       <div class="item">
         <i class="text telephone icon"></i> <b data="telephone">1388888888</b>
