Add and remove friend finished

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,11 +113,12 @@
         </div>
         <div class="results"></div>
       </div>
+        
       <a class="item launch-toc-new-friend-details">
-          <i><b data="name">李强</b>  请求添加您为好友</i>
+          <i><b data="name"></b>  请求添加您为好友</i>
       </a>
       <a class="item launch-toc-friend-details">
-        <b>李强</b>
+        <b></b>
       </a>
     </div>     
 
