--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -413,7 +413,33 @@
         </div>
       </div>
     </div>
-
+    
+    <div class="ui profile small modal" style="max-width: ">
+      <i class="close icon"></i> 
+      <div class="ui content">
+        <div class="ui middle aligned relaxed fitted stackable grid">
+          <div class="column">
+            <div class="ui form">
+              <div class="field">
+                <label>Email</label>
+                <div class="ui left icon input">
+                  <input name="email" type="text" placeholder="email">
+                  <i class="email icon"></i>
+                </div>
+              </div>
+              <div class="field">
+                <label>手机</label>
+                <div class="ui left icon input">
+                  <input name="email" type="text" placeholder="手机">
+                  <i class="telephone icon"></i>
+                </div>
+              </div>
+              <div class="ui green submit button">保存</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 <script>
 window.less = {
   async        : true,
