Upload and download finished

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,6 +49,7 @@
 <script src="javascript/modal.js"></script> 
 <script src="javascript/breadcrumb.js"></script>
 <script src="javascript/checkbox.js"></script>
+<script src="javascript/toolbar.js"></script>
 <script src="javascript/init.js"></script>
     
 <!-- The style sheets -->
@@ -273,27 +274,27 @@
 
       <div class="container toolbar">
         <div class="tiny ui buttons">
-          <div class="ui button">
+          <div class="ui button" id="new-folder">
             <i class="folder outline icon"></i>
             新建文件夹
           </div>
-          <div class="ui button">
+          <div class="ui button" id="select-all">
             <i class="checkmark box icon"></i>
             全选
           </div>
-          <div class="ui button">
+          <div class="ui button" id="copy">
             <i class="copy icon"></i>
             复制到
           </div>
-          <div class="ui button">
+          <div class="ui button" id="move">
             <i class="cut icon"></i>
             移动到
           </div>
-          <div class="ui button">
+          <div class="ui button" id="share">
             <i class="share icon"></i>
             分享
           </div>
-          <div class="ui button">
+          <div class="ui button" id="delete">
             <i class="trash outline icon"></i>
             删除
           </div>
@@ -302,22 +303,22 @@
 
       <div class="container toolbar no-text">
         <div class="tiny ui icon buttons">
-          <div class="ui button">
+          <div class="ui button" id="new-folder">
             <i class="folder outline icon"></i>
           </div>
-          <div class="ui button">
+          <div class="ui button" id="select-all">
             <i class="checkmark box icon"></i>
           </div>
-          <div class="ui button">
+          <div class="ui button" id="copy">
             <i class="copy icon"></i>
           </div>
-          <div class="ui button">
+          <div class="ui button" id="move">
             <i class="cut icon"></i>
           </div>
-          <div class="ui button">
+          <div class="ui button" id="share">
             <i class="share icon"></i>
           </div>
-          <div class="ui button">
+          <div class="ui button" id="delete">
             <i class="trash outline icon"></i>
           </div>
         </div>
