--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,7 @@
 <script src="javascript/checkbox.js"></script>
 <script src="javascript/toolbar.js"></script>
 <script src="javascript/loader.js"></script>
+<script src="javascript/thumbnail.js"></script>
 <script src="javascript/init.js"></script>
     
 <!-- The style sheets -->
